# actual

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Main.go  database.py  go.mod  go.sum  main.go  main.py  models.py  pom.xml  requirements.txt  schemas.py
Auth/: Google.go
cmd/api/: main.go
core/: settings.py  urls.py.  wsgi.py
internal/config/: config.go
internal/handlers/: admin.go  auth.go  submission.go  test.go  user.go
internal/middleware/: auth.go  cors.go
internal/models/: models.go
internal/repository/: submission_repo.go  test_repo.go  user_repo.go
internal/utils/: jwt.go  response.go
src/: main.rs
src/main/java/com/ielts/actual/: FirebaseConfig.java  HomeController.java  IeltsActualApplication.java  QuestionController.java  SecurityConfig.java  User.java  UserController.java  UserRepository.java
src/main/resources/: application.properties
src/test/java/com/ielts/actual/: IeltsActualApplicationTests.java
